--- a/app/views/outfits/show.html.haml
+++ b/app/views/outfits/show.html.haml
@@ -1,5 +1,4 @@
 - title @outfit.name
-- javascript_chain :jquery, :swfobject, 'wardrobe', 'outfits/show'
 %a.button#outfit-wardrobe-link{:href => wardrobe_path(:anchor => @outfit.to_query)}
   Edit a copy
 #outfit-user
@@ -10,5 +9,8 @@
 #preview-wrapper
   #preview-swf
 #outfit-items= render @outfit.worn_items
-:javascript
-  var INITIAL_OUTFIT_DATA = #{@outfit.to_json};
+- content_for :javascripts do
+  :javascript
+    var INITIAL_OUTFIT_DATA = #{@outfit.to_json};
+  = include_javascript_libraries :jquery, :swfobject
+  = include_javascripts :show_outfit_package
