--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -1,5 +1,4 @@
 - hide_home_link
-- javascript_chain :jquery, 'pet_query', 'outfits/new'
 #outfit-forms
   #pet-preview
     = image_tag 'default_preview.png', :alt => ''
@@ -100,3 +99,6 @@
   = pet_name_tag
   %button{:type => "submit"}
     I pwn!
+- content_for :javascripts do
+  = include_javascript_libraries :jquery
+  = include_javascripts :new_outfit_package
