--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
       - if content_for? :title
         &mdash;
         = yield :title
+    /[if IE]
+      = include_javascript_libraries :html5
     = stylesheet_link_tag "compiled/screen"
     = csrf_meta_tag
     = signed_in_meta_tag
