--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -106,5 +106,6 @@
       \/
       %a.outfit-delete-confirmation-no{:href => '#'} no, thanks
     </li>
+- content_for :javascripts do
   = include_javascript_libraries :jquery, :swfobject, :jquery_tmpl
   = include_javascripts :edit_outfit_package
