stop using radio and label for pet states, to fix ie bug

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -144,7 +144,7 @@ body.outfits-edit
     label
       +awesome-button
       margin: 0 .25em
-    li.selected label
+    li.selected button
       +awesome-button-color($marked_button_color)
     &.hidden
       visibility: hidden
