--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -14,14 +14,14 @@
     %form#pet-state-form
       Gender/Emotions:
       %ul
-    #save-outfit-wrapper.saving-outfit
+    #save-outfit-wrapper
       %button#save-outfit Save outfit
       %button#save-outfit-not-signed-in Log in to save outfit
       %button#save-current-outfit Save &quot;<span>current outfit</span>&quot;
       %button#save-outfit-copy Save a copy
       %form#save-outfit-form
         .outfit-star
-        %input#new-outfit-name{:type => 'text', :placeholder => 'Outfit name'}
+        %input#save-outfit-name{:type => 'text', :placeholder => 'Outfit name'}
         %button#save-outfit-finish{:type => 'submit'} Save
         %button#save-outfit-cancel{:type => 'button'} Cancel
   #preview
