--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -16,6 +16,12 @@ $outfit-header-padding: 24px
 $outfit-content-width: $sidebar-unit-inner-width - $outfit-thumbnail-size - $outfit-thumbnail-margin - 32px
 $outfit-content-inner-width: $outfit-content-width - $outfit-header-padding
 
+=icon
+  bottom: -2px
+  height: 16px
+  position: relative
+  width: 16px
+
 =outfit
   //+clearfix
   padding: .25em 0
@@ -50,20 +56,16 @@ $outfit-content-inner-width: $outfit-content-width - $outfit-header-padding
     display: block
     padding-left: $outfit-header-padding
   .outfit-star
+    +icon
     background:
       image: image-url("unstarred.png")
       position: left top
       repeat: no-repeat
-    bottom: -2px
-    /* margin-bottom doesn't work here
     cursor: pointer
     display: block
     float: left
-    height: 16px
     margin-left: -24px
     /* makes it not take up inline space
-    position: relative
-    width: 16px
   &.starred .outfit-star
     background-image: image-url("star.png")
   &.loading .outfit-star
@@ -154,6 +156,11 @@ body.outfits-edit
       display: none
   #save-outfit, #save-outfit-not-signed-in, #save-current-outfit, #save-outfit-copy, #save-outfit-finish
     +loud-awesome-button-color
+  #current-outfit-permalink
+    display: none
+    margin-right: .25em
+    img
+      +icon
   #preview
     clear: both
   #preview-swf
@@ -472,12 +479,12 @@ body.outfits-edit
       &.active-outfit
         #save-outfit
           display: none
-        #save-current-outfit, #save-outfit-copy
+        #current-outfit-permalink, #save-current-outfit, #save-outfit-copy
           display: inline-block
       &.saving-outfit
         #save-outfit-form
           display: block
-        #save-outfit, #save-current-outfit, #save-outfit-copy
+        #save-outfit, #save-current-outfit, #save-outfit-copy, #current-outfit-permalink
           display: none
   
   &.user-not-signed-in
