--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -17,6 +17,8 @@
     #save-outfit-wrapper
       %button#save-outfit Save outfit
       %button#save-outfit-not-signed-in Log in to save outfit
+      %a#current-outfit-permalink{:target => '_blank'}
+        = image_tag 'link_go.png', :alt => 'Permalink', :title => 'Permalink'
       %button#save-current-outfit Save &quot;<span>current outfit</span>&quot;
       %button#save-outfit-copy Save a copy
       %form#save-outfit-form
